<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.SettingsActivity">

    <pl.droidsonroids.gif.GifImageView
        android:id="@+id/gifImage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:scaleType="fitXY" />

    <Button
        android:id="@+id/btn_size"
        android:layout_width="@dimen/feedback_button_width"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@drawable/rounded_btn"
        android:drawablePadding="8dp"
        android:drawableRight="@drawable/ic_arrow_right"
        android:onClick="changeScale"
        android:text="@string/scale"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/btn_speed"
        android:layout_width="@dimen/feedback_button_width"
        android:layout_height="wrap_content"
        android:layout_above="@id/btn_size"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:background="@drawable/rounded_btn"
        android:drawablePadding="8dp"
        android:drawableRight="@drawable/ic_arrow_right"
        android:onClick="changeSpeed"
        android:text="@string/speed"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/btn_purchase"
        android:layout_width="@dimen/feedback_button_width"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_size"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:background="@drawable/rounded_btn"
        android:drawablePadding="8dp"
        android:drawableRight="@drawable/ic_arrow_right"
        android:onClick="purchase"
        android:text="@string/settings_upgrade"
        android:textColor="@android:color/white" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <include layout="@layout/bottom_menu" />
    </RelativeLayout>
</RelativeLayout>
